Add English homepage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-"<!DOCTYPE html><html><head><title>HappyEdit</title></head><body><h1>Welcome to HappyEdit</h1></body></html>" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HappyEdit - Free Online PDF Tools</title>
+  <meta name="description" content="HappyEdit offers free online PDF tools: Edit, Split, Delete Pages, Add Pages, and Decrypt PDFs directly in your browser. No uploads needed.">
+  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="icon" href="assets/favicon.png" type="image/png">
+</head>
+<body>
+  <header>
+    <h1>Welcome to HappyEdit</h1>
+    <p>Your free online PDF toolkit. All operations are done in your browser.</p>
+  </header>
+
+  <main>
+    <section class="tools">
+      <div class="tool">
+        <h2>Edit PDF</h2>
+        <p>Edit your PDF directly in the browser.</p>
+        <a href="edit/index.html" class="btn">Go to Editor</a>
+      </div>
+
+      <div class="tool">
+        <h2>Split PDF</h2>
+        <p>Split your PDF into multiple pages.</p>
+        <a href="split/index.html" class="btn">Split PDF</a>
+      </div>
+
+      <div class="tool">
+        <h2>Delete Pages</h2>
+        <p>Remove unwanted pages from your PDF.</p>
+        <a href="delete-pages/index.html" class="btn">Delete Pages</a>
+      </div>
+
+      <div class="tool">
+        <h2>Add Pages</h2>
+        <p>Insert pages into your PDF file.</p>
+        <a href="add-pages/index.html" class="btn">Add Pages</a>
+      </div>
+
+      <div class="tool">
+        <h2>Decrypt PDF</h2>
+        <p>Unlock password-protected PDFs in your browser.</p>
+        <a href="decrypt/index.html" class="btn">Decrypt PDF</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 HappyEdit. All operations are performed in your browser. No files are uploaded.</p>
+  </footer>
+
+</body>
+</html>
