--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HappyEdit - Free Online PDF Tools</title>
   <meta name="description" content="HappyEdit offers free online PDF tools: Edit, Split, Delete Pages, Add Pages, and Decrypt PDFs directly in your browser. No uploads needed.">
+  <meta name="keywords" content="PDF, edit PDF, split PDF, merge PDF, delete pages, decrypt PDF, online tool">
+  <meta name="google-site-verification" content="你的GSC验证码">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="HappyEdit - Free Online PDF Tools">
+  <meta property="og:description" content="Free online PDF tools: edit, split, merge, delete, add pages, and decrypt PDFs easily.">
+  <meta property="og:url" content="https://happyedit.dpdns.org/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://happyedit.dpdns.org/assets/cover.png">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" href="assets/favicon.png" type="image/png">
+  <style>
+    /* 基础重置 */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f5f6fa; color: #333; line-height: 1.6; }
+
+    header { background: #4a90e2; color: #fff; text-align: center; padding: 60px 20px; }
+    header h1 { font-size: 2.5rem; margin-bottom: 10px; }
+    header p { font-size: 1.2rem; }
+
+    main { max-width: 1200px; margin: 40px auto; padding: 0 20px; }
+    .tools { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; }
+    .tool { background: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 30px 20px; text-align: center; transition: transform 0.2s, box-shadow 0.2s; }
+    .tool:hover { transform: translateY(-5px); box-shadow: 0 8px 20px rgba(0,0,0,0.12); }
+
+    .tool h2 { font-size: 1.4rem; margin-bottom: 10px; color: #4a90e2; }
+    .tool p { font-size: 1rem; margin-bottom: 20px; color: #555; }
+    .btn { display: inline-block; padding: 10px 25px; background: #4a90e2; color: #fff; border-radius: 8px; text-decoration: none; font-weight: 600; transition: background 0.2s; }
+    .btn:hover { background: #357abd; }
+
+    footer { text-align: center; padding: 30px 20px; background: #f1f3f6; color: #555; font-size: 0.9rem; margin-top: 50px; }
+    
+    /* 响应式调整 */
+    @media (max-width: 600px) {
+      header h1 { font-size: 2rem; }
+      header p { font-size: 1rem; }
+      .tool h2 { font-size: 1.2rem; }
+      .tool p { font-size: 0.9rem; }
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -51,6 +88,5 @@
   <footer>
     <p>&copy; 2025 HappyEdit. All operations are performed in your browser. No files are uploaded.</p>
   </footer>
-
 </body>
 </html>
