--- a/index.html
+++ b/index.html
@@ -18,30 +18,68 @@
   <style>
     /* 基础重置 */
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f5f6fa; color: #333; line-height: 1.6; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #74ebd5, #ACB6E5); color: #333; min-height: 100vh; }
 
-    header { background: #4a90e2; color: #fff; text-align: center; padding: 60px 20px; }
-    header h1 { font-size: 2.5rem; margin-bottom: 10px; }
+    header { text-align: center; padding: 60px 20px; color: #fff; text-shadow: 0 1px 3px rgba(0,0,0,0.3); }
+    header h1 { font-size: 2.8rem; margin-bottom: 10px; }
     header p { font-size: 1.2rem; }
 
     main { max-width: 1200px; margin: 40px auto; padding: 0 20px; }
-    .tools { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; }
-    .tool { background: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 30px 20px; text-align: center; transition: transform 0.2s, box-shadow 0.2s; }
-    .tool:hover { transform: translateY(-5px); box-shadow: 0 8px 20px rgba(0,0,0,0.12); }
+    .tools { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; }
 
-    .tool h2 { font-size: 1.4rem; margin-bottom: 10px; color: #4a90e2; }
-    .tool p { font-size: 1rem; margin-bottom: 20px; color: #555; }
-    .btn { display: inline-block; padding: 10px 25px; background: #4a90e2; color: #fff; border-radius: 8px; text-decoration: none; font-weight: 600; transition: background 0.2s; }
-    .btn:hover { background: #357abd; }
+    .tool {
+      background: rgba(255, 255, 255, 0.15);
+      border-radius: 20px;
+      padding: 30px 20px;
+      text-align: center;
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
 
-    footer { text-align: center; padding: 30px 20px; background: #f1f3f6; color: #555; font-size: 0.9rem; margin-top: 50px; }
-    
-    /* 响应式调整 */
+    .tool:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.2);
+    }
+
+    .tool h2 { font-size: 1.5rem; margin-bottom: 10px; color: #fff; text-shadow: 0 1px 3px rgba(0,0,0,0.3); }
+    .tool p { font-size: 1rem; margin-bottom: 20px; color: #f0f0f0; }
+
+    .btn {
+      display: inline-block;
+      padding: 12px 30px;
+      background: rgba(255, 255, 255, 0.25);
+      color: #fff;
+      border-radius: 12px;
+      text-decoration: none;
+      font-weight: 600;
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255,255,255,0.3);
+      transition: background 0.3s, transform 0.3s;
+    }
+
+    .btn:hover {
+      background: rgba(255, 255, 255, 0.35);
+      transform: translateY(-3px);
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      color: #fff;
+      font-size: 0.9rem;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+      margin-top: 50px;
+    }
+
+    /* 响应式 */
     @media (max-width: 600px) {
-      header h1 { font-size: 2rem; }
+      header h1 { font-size: 2.2rem; }
       header p { font-size: 1rem; }
-      .tool h2 { font-size: 1.2rem; }
-      .tool p { font-size: 0.9rem; }
+      .tool h2 { font-size: 1.3rem; }
+      .tool p { font-size: 0.95rem; }
     }
   </style>
 </head>
