--- a/add-pages/index.html
+++ b/add-pages/index.html
@@ -1,51 +1,160 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HappyEdit — Add Pages</title>
-  <meta name="description" content="Insert pages into an existing PDF or append pages from another PDF.">
-  <link rel="stylesheet" href="../assets/styles.css">
+  <meta name="description" content="Insert pages into an existing PDF or append pages from another PDF. All processing happens locally in your browser.">
   <link rel="icon" href="../assets/favicon.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/styles.css">
+
   <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: radial-gradient(1200px 600px at 10% 10%, rgba(123,97,255,0.18), transparent 10%),
+                  radial-gradient(1000px 500px at 90% 90%, rgba(45,212,191,0.12), transparent 12%),
+                  linear-gradient(180deg,#0f172a,#0b3e6b);
+      color: white;
+      min-height: 100vh;
+      margin: 0;
+      padding: 32px 20px;
+    }
+
+    .wrap {
+      max-width: 1000px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 10;
+    }
+
+    header{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      margin-bottom:32px;
+    }
+    header .logo{
+      font-size:1.8rem;
+      font-weight:700;
+      color:#fff;
+      text-decoration:none;
+    }
+    header nav a{
+      color: rgba(255,255,255,0.85);
+      text-decoration:none;
+      font-weight:600;
+    }
+    header nav a:hover{color:#7b61ff;}
+
+    h1{margin-bottom:12px;}
+    p.lead{color:rgba(255,255,255,0.85); margin-bottom:20px;}
+
+    .card {
+      background: rgba(255,255,255,0.12);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-radius:16px;
+      border:1px solid rgba(255,255,255,0.08);
+      padding:20px;
+      box-shadow:0 10px 30px rgba(2,6,23,0.55);
+      transition: transform 0.22s, box-shadow 0.22s;
+      margin-bottom:20px;
+    }
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 18px 40px rgba(2,6,23,0.6);
+    }
+
+    label.file-label{
+      display:block;
+      margin-bottom:12px;
+      font-weight:600;
+      font-size:14px;
+    }
+    input[type="file"], input[type="number"]{
+      width:100%;
+      padding:8px 12px;
+      border-radius:10px;
+      border:none;
+      margin-top:4px;
+    }
+
+    .controls-row{
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+      margin:14px 0;
+    }
+    .btn, .btn-primary {
+      cursor:pointer;
+      padding:10px 16px;
+      border-radius:12px;
+      border:none;
+      font-weight:700;
+      transition: transform 0.18s;
+      text-decoration:none;
+      text-align:center;
+      display:inline-block;
+    }
+    .btn{
+      background: rgba(255,255,255,0.08);
+      color:#fff;
+    }
+    .btn:hover{transform: translateY(-2px);}
+    .btn-primary{
+      background: linear-gradient(90deg, #7b61ff, #2dd4bf);
+      color:#041124;
+    }
+
+    footer{
+      text-align:center;
+      color: rgba(255,255,255,0.78);
+      margin-top:40px;
+      font-size:0.9rem;
+    }
+  </style>
 </head>
 <body>
-  <header class="site-header">
-    <a class="logo" href="../">HappyEdit</a>
-    <nav><a href="../">Home</a></nav>
-  </header>
+  <div class="wrap">
+    <header>
+      <a class="logo" href="../">HappyEdit</a>
+      <nav><a href="../">Home</a></nav>
+    </header>
 
-  <main class="container">
-    <h1>Add Pages</h1>
-    <p class="lead">Insert pages from another PDF or add blank pages to your document.</p>
+    <main>
+      <h1>Add Pages</h1>
+      <p class="lead">Insert pages from another PDF or add blank pages to your document.</p>
 
-    <div class="card">
-      <label class="file-label">Base PDF
-        <input id="basePdf" type="file" accept="application/pdf">
-      </label>
+      <div class="card">
+        <label class="file-label">Base PDF
+          <input id="basePdf" type="file" accept="application/pdf">
+        </label>
 
-      <label class="file-label">PDF to insert (optional)
-        <input id="insertPdf" type="file" accept="application/pdf">
-      </label>
+        <label class="file-label">PDF to insert (optional)
+          <input id="insertPdf" type="file" accept="application/pdf">
+        </label>
 
-      <div class="controls-row">
-        <input id="insertIndex" type="number" min="0" placeholder="Insert at page index (0 = front)" />
-        <input id="blankCount" type="number" min="0" placeholder="Add N blank pages to end" />
-        <button id="doInsert" class="btn">Insert / Append</button>
+        <div class="controls-row">
+          <input id="insertIndex" type="number" min="0" placeholder="Insert at page index (0 = front)" />
+          <input id="blankCount" type="number" min="0" placeholder="Add N blank pages to end" />
+          <button id="doInsert" class="btn">Insert / Append</button>
+        </div>
+
+        <div class="actions">
+          <button id="downloadBtn" class="btn-primary" disabled>Download Result</button>
+        </div>
       </div>
+    </main>
 
-      <div class="actions">
-        <button id="downloadBtn" class="btn btn-primary" disabled>Download Result</button>
-      </div>
-    </div>
-  </main>
-
-  <footer class="site-footer">© 2025 HappyEdit</footer>
+    <footer>© 2025 HappyEdit — Files processed locally in your browser</footer>
+  </div>
 
 <script>
 const { PDFDocument } = PDFLib;
-
 const basePdfEl = document.getElementById('basePdf');
 const insertPdfEl = document.getElementById('insertPdf');
 const insertIndexEl = document.getElementById('insertIndex');
@@ -72,61 +181,42 @@ doInsertBtn.addEventListener('click', async () => {
   const base = await PDFDocument.load(baseBuffer);
   const out = await PDFDocument.create();
 
-  // copy base pages first
   const baseCopied = await out.copyPages(base, base.getPageIndices());
   baseCopied.forEach(p => out.addPage(p));
 
-  // insert PDF pages if provided
   if (insertBuffer) {
     const ins = await PDFDocument.load(insertBuffer);
     const insCopied = await out.copyPages(ins, ins.getPageIndices());
-    const index = Math.max(0, Number(insertIndexEl.value) || 0);
-    // perform insert by rebuilding pages array
-    const allPages = out.getPages();
-    // naive approach: append then reorder
-    insCopied.forEach(p => out.addPage(p));
-    // reorder: create new PDF and re-add pages in desired order
+    const index = Math.min(Math.max(0, Number(insertIndexEl.value) || 0), base.getPageCount());
     const final = await PDFDocument.create();
-    const totalPages = out.getPageCount();
-    // decide order: insert at index => pages 0..index-1, then inserted, then rest
-    // but since we appended inserted pages at end we reconstruct using copies from out
-    const src = await out.save(); // this produces bytes; we'll re-load to get consistent indices
+    const src = await out.save();
     const loaded = await PDFDocument.load(src);
-    const loadedIndices = loaded.getPageIndices();
-    // number of original base pages:
-    const nBase = base.getPageCount();
-    // build desired index array
-    const insertionIndex = Math.min(Math.max(0, Number(insertIndexEl.value) || 0), nBase);
     const indices = [
-      ...Array.from({length: insertionIndex}, (_,i)=>i),
-      ...Array.from({length: ins.getPageCount()}, (_,i)=>nBase + i),
-      ...Array.from({length: nBase - insertionIndex}, (_,i)=>insertionIndex + i)
+      ...Array.from({length:index},(_,i)=>i),
+      ...Array.from({length:ins.getPageCount()},(_,i)=>base.getPageCount()+i),
+      ...Array.from({length:base.getPageCount()-index},(_,i)=>index+i)
     ];
     const copied = await final.copyPages(loaded, indices);
-    copied.forEach(p => final.addPage(p));
-    // append blank pages if requested
-    const blanks = Math.max(0, Number(blankCountEl.value) || 0);
-    for (let i=0;i<blanks;i++) final.addPage();
+    copied.forEach(p=>final.addPage(p));
+    const blanks = Math.max(0, Number(blankCountEl.value)||0);
+    for(let i=0;i<blanks;i++) final.addPage();
     resultBytes = await final.save();
   } else {
-    // only base + blank pages
-    const blanks = Math.max(0, Number(blankCountEl.value) || 0);
-    for (let i=0;i<blanks;i++) out.addPage();
+    const blanks = Math.max(0, Number(blankCountEl.value)||0);
+    for(let i=0;i<blanks;i++) out.addPage();
     resultBytes = await out.save();
   }
-
   alert('Done — you can download the resulting PDF.');
   downloadBtn.disabled = false;
 });
 
 downloadBtn.addEventListener('click', () => {
   if (!resultBytes) {
-    // maybe user didn't insert any file but base exists
-    if (baseBuffer) {
-      const blob = new Blob([baseBuffer], {type: 'application/pdf'});
-      const a = document.createElement('a');
-      a.href = URL.createObjectURL(blob);
-      a.download = 'happyedit-result.pdf';
+    if (baseBuffer){
+      const blob = new Blob([baseBuffer], {type:'application/pdf'});
+      const a=document.createElement('a');
+      a.href=URL.createObjectURL(blob);
+      a.download='happyedit-result.pdf';
       document.body.appendChild(a);
       a.click();
       a.remove();
@@ -134,10 +224,10 @@ downloadBtn.addEventListener('click', () => {
     }
     return alert('No result available. Click Insert first.');
   }
-  const blob = new Blob([resultBytes], {type: 'application/pdf'});
-  const a = document.createElement('a');
-  a.href = URL.createObjectURL(blob);
-  a.download = 'happyedit-added.pdf';
+  const blob = new Blob([resultBytes],{type:'application/pdf'});
+  const a=document.createElement('a');
+  a.href=URL.createObjectURL(blob);
+  a.download='happyedit-added.pdf';
   document.body.appendChild(a);
   a.click();
   a.remove();
